--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -22,14 +22,17 @@
     <li ng-repeat='something'> {{}} </li>>
   </ul>
  -->
-
-  <div class='info'>
-    <div class='visits'><span class='count'>{{model.visits}}</span>Visits</div>
-    <div class='title'>{{model.title}}</div>
-    <div class='original'>URL: {{model.url}}</div>
-    <a href='{{model.base_url}}/{{model.code}}'>{{model.base_url}}/{{model.code}}</a>
+<div class='links'>
+  <div class='link'>
+  <img src='assets/redirect_icon.png'>
+    <div class='info'>
+      <div class='visits'><span class='count'>{{model.visits}}</span>Visits</div>
+      <div class='title'>{{model.title}}</div>
+      <div class='original'>URL: {{model.url}}</div>
+      <a href='{{model.base_url}}/{{model.code}}'>{{model.base_url}}/{{model.code}}</a>
+    </div>
   </div>
-
+</div>
 </div>
 
 
